Adicionando Imagens dos Jogos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Jogo 1 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="caminho/para/imagem-jogo-1.jpg" class="card-img-top" alt="Nome do Jogo 1">
+                    <img src="callofdutty.jpg" class="card-img-top" alt="Nome do Jogo 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 1</h5>
                         <p class="card-text">Tipo do Jogo 1</p>
@@ -29,7 +29,7 @@
             <!-- Jogo 2 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="caminho/para/imagem-jogo-2.jpg" class="card-img-top" alt="Nome do Jogo 2">
+                    <img src="amongus.jpg" class="card-img-top" alt="Nome do Jogo 2">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 2</h5>
                         <p class="card-text">Tipo do Jogo 2</p>
@@ -42,7 +42,7 @@
             <!-- Jogo 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="caminho/para/imagem-jogo-3.jpg" class="card-img-top" alt="Nome do Jogo 3">
+                    <img src="fifa23.jpg" class="card-img-top" alt="Nome do Jogo 3">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 3</h5>
                         <p class="card-text">Tipo do Jogo 3</p>
