Add Navbar com Logo e Links

--- a/index.html
+++ b/index.html
@@ -10,13 +10,47 @@
 
 <body>
 
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+            <img src="imgs/logo.png" alt="Logo" height="40">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Categoria
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Categoria 1</a>
+                            <a class="dropdown-item" href="#">Categoria 2</a>
+                            <a class="dropdown-item" href="#">Categoria 3</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item ml-2">
+                    <a class="nav-link" href="#">Carrinho</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container mt-5">
         <div class="row">
 
             <!-- Jogo 1 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="callofdutty.jpg" class="card-img-top" alt="Nome do Jogo 1">
+                    <img src="./imgs/callofdutty.jpg" class="card-img-top" alt="Nome do Jogo 1">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 1</h5>
                         <p class="card-text">Tipo do Jogo 1</p>
@@ -29,7 +63,7 @@
             <!-- Jogo 2 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="amongus.jpg" class="card-img-top" alt="Nome do Jogo 2">
+                    <img src="./imgs/fifa23.jpg" class="card-img-top" alt="Nome do Jogo 2">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 2</h5>
                         <p class="card-text">Tipo do Jogo 2</p>
@@ -42,7 +76,7 @@
             <!-- Jogo 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="fifa23.jpg" class="card-img-top" alt="Nome do Jogo 3">
+                    <img src="./imgs/amongus.jpg" class="card-img-top" alt="Nome do Jogo 3">
                     <div class="card-body">
                         <h5 class="card-title">Nome do Jogo 3</h5>
                         <p class="card-text">Tipo do Jogo 3</p>
