Add Select de Filtros

--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
         <img src="imgs/cover.png" class="img-fluid banner-img" alt="Banner">
     </div>
 
+    <!-- Filtros -->
+    <div class="container-fluid mt-2">
+        <div class="row justify-content-end">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <select class="form-control form-control-sm" id="ordenar">
+                        <option>Menor Preço</option>
+                        <option>Maior Preço</option>
+                        <option>Mais Relevantes</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="container-fluid mt-3">
         <div class="row">
 
