Personalizando o Navbar e Link

--- a/layout.html
+++ b/layout.html
@@ -5,18 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Games 4 Devs</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    ::placeholder {
+        color: #ffffff !important;
+    }
+</style>
 </head>
+
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand mx-auto" href="#">Games 4 DEVS</a>
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+<!-- Navbar -->
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Games 4 DEVS</a>
+    <form class="form-inline mx-auto">
+        <input class="form-control" type="search" placeholder="Search" aria-label="Search"
+            style="background-color: #343a40; color: #ffffff;">
     </form>
-    <a class="btn btn-danger" href="#">Sign Out</a>
-  </nav>
+    <a class="nav-link text-white-50" href="#">Sign Out</a>
+</nav>
 
   <!-- Sidebar -->
   <div class="container mt-4">
