--- a/layout.html
+++ b/layout.html
@@ -3,37 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Games 4 Devs</title>
+  <title>Games 4 DEVS</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     ::placeholder {
-        color: #ffffff !important;
+      color: #ffffff;
     }
-</style>
+  </style>
 </head>
-
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-dark bg-dark">
+  <!-- Navbar -->
+  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Games 4 DEVS</a>
     <form class="form-inline mx-auto">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search"
-            style="background-color: #343a40; color: #ffffff;">
+      <input class="form-control" type="search" placeholder="Search" aria-label="Search" style="background-color: #343a40; color: #ffffff;">
     </form>
-    <a class="nav-link text-white-50" href="#">Sign Out</a>
-</nav>
+    <a class="nav-link text-muted" href="#">Sign Out</a>
+  </nav>
 
-  <!-- Sidebar -->
-  <div class="container mt-4">
+  <div class="container-fluid mt-4">
     <div class="row">
-      <div class="col-md-2">
-        <ul class="list-group">
-          <li class="list-group-item"><a href="#">Dashboard</a></li>
-          <li class="list-group-item"><a href="#">Games</a></li>
-          <li class="list-group-item"><a href="#">User</a></li>
-          <li class="list-group-item"><a href="#">My Games</a></li>
-        </ul>
+
+      <!-- Sidebar -->
+      <div class="col-md-2 d-none d-md-block bg-light">
+        <div class="sidebar-sticky">
+          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+            <span>Menu</span>
+            <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
+              <span data-feather="plus-circle"></span>
+            </a>
+          </h6>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="file"></span>
+                Dashboard
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="file"></span>
+                Games
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="shopping-cart"></span>
+                Users
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="shopping-cart"></span>
+                My Games
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <!-- Conteúdo Principal -->
