Add + Dados da Tabela de Usuarios

--- a/layout.html
+++ b/layout.html
@@ -105,12 +105,23 @@
           </thead>
           <tbody>
             <tr>
-              <td>Nome do Usuário 1</td>
-              <td>email@example.com</td>
-              <td>Brasil</td>
+                <td>Lucas</td>
+                <td>lucas@example.com</td>
+                <td>Brasil</td>
+            </tr>
+            <tr>
+                <td>Jorge</td>
+                <td>email@example.com</td>
+                <td>EUA</td>
+            </tr>
+            <tr>
+                <td>Gabriel</td>
+                <td>gabriel@example.com</td>
+                <td>Brasil</td>
             </tr>
             <!-- Adicione mais linhas conforme necessário -->
-          </tbody>
+        </tbody>
+
         </table>
       </div>
     </div>
