Add e Mudando as Informaçoes da Table de Jogos

--- a/layout.html
+++ b/layout.html
@@ -80,17 +80,38 @@
           </thead>
           <tbody>
             <tr>
-              <td>Nome do Jogo 1</td>
-              <td>R$XX,XX</td>
-              <td>Ação</td>
-              <td>Desenvolvedor 1</td>
-              <td>
-                <button class="btn btn-primary">Editar</button>
-                <button class="btn btn-danger">Excluir</button>
-              </td>
+                <td>Among US</td>
+                <td>R$85,99</td>
+                <td>Aventura</td>
+                <td>Desconhecida</td>
+                <td>
+                    <button class="btn btn-primary">Editar</button>
+                    <button class="btn btn-danger">Excluir</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Call Of Dutty</td>
+                <td>R$85,99</td>
+                <td>Tiro e Ação</td>
+                <td>Blizzard</td>
+                <td>
+                    <button class="btn btn-primary">Editar</button>
+                    <button class="btn btn-danger">Excluir</button>
+                </td>
+            </tr>
+            <tr>
+                <td>FIFA 23</td>
+                <td>R$85,99</td>
+                <td>Esportes</td>
+                <td>EA</td>
+                <td>
+                    <button class="btn btn-primary">Editar</button>
+                    <button class="btn btn-danger">Excluir</button>
+                </td>
             </tr>
             <!-- Adicione mais linhas conforme necessário -->
-          </tbody>
+        </tbody>
+
         </table>
 
         <!-- Tabela de Usuários -->
